# basic-rustos-bios

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: main.rs  serial.rs  vga_buffer.rs
