[package]
name = "rustos"
version = "0.1.0"
authors = ["DarkAEther <30438425+DarkAEther@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"